# spooky_db_module

./: Cargo.toml  IMPROVEMENT_PLAN.md  README.md  adjust_db_functions.md  context.md  db_architecture.md  lru_cache_plan.md  root_project_context.md
benches/: spooky_bench.rs  testdata.json
docs/: API.md  ARCHITECTURE.md
examples/: 500k_gen.rs  gen_cbor.rs
improvments/: improv_impl.md
src/: deserialization.rs  error.rs  lib.rs  main.rs  mod.rs  record.rs  record_mut.rs  serialization.rs  spooky_record.rs  spooky_record_mut.rs  spooky_value.rs  types.rs
src/db/: db.rs  mod.rs  types.rs
src/spooky_record/: migration_op.rs  mod.rs  read_op.rs  record.rs  record_mut.rs  tests.rs  write_op.rs
