[package]
name = "spooky_db_module"
version = "0.1.0"
edition = "2024"

[dependencies]
cbor4ii = { version = "1.2.2", features = ["serde1", "use_alloc"] }

redb = "3.1.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
smol_str = { version = "0.3.5", features = ["serde"] }
tempfile = "3.24.0"
xxhash-rust = {version = "0.8.15", features = ["xxh64", "const_xxh64"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "spooky_bench"
harness = false
